fix: apply z-index on focused element

--- a/packages/react/src/theme/src/styles/_mixins.scss
+++ b/packages/react/src/theme/src/styles/_mixins.scss
@@ -16,6 +16,8 @@
   &#{$target} {
     outline: $width solid $color;
     outline-offset: $offset;
+    z-index: 1;
+
     @content;
   }
 }
